# qx-conf-gen

./: .gitignore  Cargo.toml  readme.md  rule
src/: clash_to_qx.rs  constant.rs  generate.rs  lib.rs  main.rs
