[package]
name = "qx-conf-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm={version = "0.26",features = ["event-stream"]}
reqwest="0.11.22"
tokio = { version = "1", features = ["full"] }
futures={ version = "0.3.29" }
regex = "1"
url = "2.2.2"  # 确保使用最新版本

